Thu Jan 15 12:45:02 2004  George Lebl <jirka@5z.com>

	* configure.in, daemon/verify-(crypt|shadow).c:
	  Apply patch from Vincent Berger <vincent.berger@ext.bull.net>
	  to re-fix #123766 by clearing the ADMCHG token.

Thu Jan 15 12:35:45 2004  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Fix #131389 where if the slave crashed the
	  login field was not cleared

Tue Jan 13 08:40:29 2004  George Lebl <jirka@5z.com>

	* daemon/auth.c: Add sys/socket.h include to fix compilation
	  on freebsd, fixes #130963, thanks to Joe Marcus Clarke
	  <marcus@freebsd.org>

	* daemon/verify-crypt.c, daemon/verify-shadow.c: Fix compilation
	  of the crypt and shadow compilation.  Fixes #131042

Thu Jan 08 10:23:32 2004  George Lebl <jirka@5z.com>

	* Release 2.5.90.0

Tue Jan 06 17:16:40 2004  George Lebl <jirka@5z.com>

	* confiogure.in: fix INTLTOOL test

Tue Jan 06 17:06:42 2004  George Lebl <jirka@5z.com>

	* gui/greeter/themes/*/*: remove the xml.in files and readd the .xml
	  files.  There are no translations done anymore.

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/misc.[ch],
	  daemon/slave.c, daemon/verify-crypt.c, daemon/verify-pam.c,
	  daemon/verify-shadow.c: Add support for displaying last login
	  information if daemon/DisplayLastLogin is set (default to true).
	  Fixes #128940

	* daemon/verify-crypt.c, daemon/verify-shadow.c:  The 'user already
	  logged in' (double login warning) dialog thingie should only be
	  shown AFTER all verification is done (as it does for PAM setups)

	* docs/C/gdm.xml: update for DisplayLastLogin

	* config/gdm.conf.in, daemon/gdm.h: the RetryDelay is annoying at 3
	  now that it works.  Set it to 1.

Tue Jan 06 16:06:12 2004  George Lebl <jirka@5z.com>

	* gui/gdmflexiserver.c: the console/vt check for check_for_users
	  was completely wrong

Tue Jan 06  Brian Cameron <Brian.Cameron@Sun.COM>

	* gui/modules/dwellmouselistener.c,
      gui/modules/keymouselistener.c:  Moved include of vicious.h 