@@ -1,3 +1,9 @@
+Tue Jan 16  Brian Cameron <Brian.Cameron@Sun.COM>
+
+	* daemon/misc.c:
+	  Fixed core dumping error that was causing the greeter
+	  to crash on Solaris after entering the username.
+
 Thu Jan 15 12:45:02 2004  George Lebl <jirka@5z.com>
 
 	* configure.in, daemon/verify-(crypt|shadow).c:
